objects/copado__Persona_Definition__c.object
<CustomObject>
    <fields>
        <fullName>copado__Config_JSON__c</fullName>
        <label>Config JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <label>Persona</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Restrict_Standard_Persona_Modification</fullName>
        <active>false</active>
        <errorConditionFormula>AND(copado__Is_Standard__c, ISCHANGED(copado__Config_JSON__c))</errorConditionFormula>
        <errorMessage>Standard persona definitions can not be modified. Please create a custom persona definition.</errorMessage>
    </validationRules>
</CustomObject>